--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
 
 <body>
     <header>
-
+        <div class="container">
+            <div class="header-left">
+                <P class="logo">D11</P>
+            </div>
+            <span class="fa fa-bars menu-icon"></span>
+            <div class="header-right">
+                <a href="#" class="login">Log in</a>
+            </div>
+        </div>
     </header>
     <main>
 
