--- a/index.html
+++ b/index.html
@@ -24,6 +24,18 @@
         </div>
     </header>
     <main>
+        <section>
+            <div class="top-wrapper">
+                <div class="container">
+                    <span class="background"></span>
+                    <h1>LOREM IPSUM</h1>
+                    <h1>LOREM IPSUM DOLOR SIT AMET</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat aspernatur nobis, autem
+                        assumenda nesciunt cumque mollitia ipsam quod maxime consectetur magni molestias unde veniam
+                        voluptatum nam ducimus enim iste accusamus.</p>
+                </div>
+            </div>
+        </section>
 
     </main>
     <footer>
