--- a/index.html
+++ b/index.html
@@ -28,15 +28,61 @@
             <div class="top-wrapper">
                 <div class="container">
                     <span class="background"></span>
-                    <h1>LOREM IPSUM</h1>
-                    <h1>LOREM IPSUM DOLOR SIT AMET</h1>
+                    <h1>Indonesian Food</h1>
+                    <h1>Kekayaan hidangan diseluruh Indonesia</h1>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat aspernatur nobis, autem
                         assumenda nesciunt cumque mollitia ipsam quod maxime consectetur magni molestias unde veniam
                         voluptatum nam ducimus enim iste accusamus.</p>
                 </div>
             </div>
         </section>
-
+        <section>
+            <div class="lesson-wrapper">
+      <div class="container">
+        <div class="heading">
+          <h2>Pilihan Daerah Asal Kami</h2>
+        </div>
+        <div class="lessons">
+          <div class="lesson">
+            <div class="lesson-icon">
+              <img src="images/Lumpia.png">
+              <p>Lumpia</p>
+            </div>
+            <p class="text-contents">dikenal sebagai jajanan khas Semarang. Cita rasa lumpia adalah perpaduan rasa antara Tionghoa dan Indonesia.Lumpia terdiri dari lembaran tipis tepung gandum yang dijadikan sebagai pembungkus isian yang umumnya adalah rebung, telur, sayuran segar, daging, atau makanan laut.</p>
+          </div>
+          <div class="lesson">
+            <div class="lesson-icon">
+              <img src="images/memek.png">
+              <p>Memek</p>
+            </div>
+            <p class="text-contents">Memek adalah kudapan khas Pulau Simeulue di Aceh, Indonesia. Makanan ini mirip bubur dan terbuat dari beras ketan dan pisang.</p>
+          </div>
+          <div class="lesson">
+            <div class="lesson-icon">
+              <img src="images/Pudak.png">
+              <p>Pudak</p>
+            </div>
+            <p class="text-contents">kue khas dari Kabupaten Gresik, Jawa Timur, Indonesia. Makanan ini terbuat dari bahan tepung beras, gula pasir/gula jawa dan santan kelapa yang dimasukkan kemasan yang disebut "Ope" yaitu pelepah daun pinang.</p>
+          </div>
+          <div class="lesson">
+            <div class="lesson-icon">
+              <img src="images/Nasi thiwul.png">
+              <p>Nasi Thiwul</p>
+            </div>
+            <p class="text-contents">Nasi thiwul adalah nasi dengan berbahan pokok dari umbi ketela pohon yang telah diolah dengan cara tertentu sehingga menjadi gaplek (dikeringkan).</p>
+          </div>
+          <div class="lesson">
+            <div class="lesson-icon">
+              <img src="images/laksa.png">
+              <p>Laksa</p>
+            </div>
+            <p class="text-contents">Laksa Tangerang bahan utamanya semacam bihun tapi tebalnya seperti spaghetti dan terbuat dari beras. Kemudian disiram dengan kuah Laksa dari kacang ijo, kentang, santan dan kaldu ayam. Sebelum disajikan masakan ini diberi taburan daun kucai yang dirajang.</p>
+          </div>
+          <div class="clear"></div>
+        </div>
+      </div>
+    </div>
+        </section>
     </main>
     <footer>
 
