--- a/index.html
+++ b/index.html
@@ -28,11 +28,9 @@
             <div class="top-wrapper">
                 <div class="container">
                     <span class="background"></span>
-                    <h1>Indonesian Food</h1>
-                    <h1>Kekayaan hidangan diseluruh Indonesia</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat aspernatur nobis, autem
-                        assumenda nesciunt cumque mollitia ipsam quod maxime consectetur magni molestias unde veniam
-                        voluptatum nam ducimus enim iste accusamus.</p>
+                    <h1>INDONESIAN FOOD</h1>
+                    <h1>KEKAYAAN HIDANGAN DISELURUH INDONESIA</h1>
+                    <p>Masakan Indonesia adalah salah satu tradisi kuliner yang paling kaya di dunia, dan penuh dengan cita rasa yang kuat. Kekayaan jenis masakannya merupakan cermin keberagaman budaya dan tradisi Nusantara yang terdiri dari sekitar 6.000 pulau berpenghuni, dan menempati peran penting dalam budaya nasional Indonesia secara umum.</p>
                 </div>
             </div>
         </section>
