--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="lesson-wrapper">
       <div class="container">
         <div class="heading">
-          <h2>Pilihan Daerah Asal Kami</h2>
+          <h2>Pilihan Dari Daerah Asal Kami</h2>
         </div>
         <div class="lessons">
           <div class="lesson">
