--- a/index.html
+++ b/index.html
@@ -79,7 +79,15 @@
         </div>
       </div>
     </div>
-        
+        <div class="message-wrapper">
+      <div class="container">
+        <div class="heading">
+          <h2>Apakah anda siap untuk menjadi chef yang handal?</h2>
+          <h3>Ayo belajar memasak, ayo belajar menjadi lebih kreatif!</h3>
+        </div>
+        <span class="btn message">Mulai Belajar</span>
+      </div>
+    </div>
     </main>
     <footer>
 
