--- a/index.html
+++ b/index.html
@@ -79,7 +79,15 @@
         </div>
       </div>
     </div>
-        
+    <div class="message-wrapper">
+      <div class="container">
+        <div class="head-message">
+          <h2>Temukan lebih banyak masakan indonesia</h2>
+          <h3>Ayo bersama lestarikan kekayaan kuliner nusantara!</h3>
+        </div>
+        <span class="btn message">Subscribe</span>
+      </div>
+    </div>
     </main>
     <footer>
 
